example-manifests/00-plain-k8s/01-v1.1.0-deploy/demo-v1-1-0-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: demo-v1-1-0
  namespace: demo
spec:
  type: ClusterIP
  selector: 
    name: demo
    version: "v1.1.0"
  ports:
  - name: http
    port: 80
    targetPort: 8080
